--- a/src/style.css
+++ b/src/style.css
@@ -33,7 +33,7 @@
 .column{
     float:left;
     width: 20%;
-   
+    color:#fff;
     text-align: right;
     padding-right: 4.8%;
     height: 5vh;
